# MT4Bridge

./: .gitignore  AMQPConnection.cpp  AMQPConnection.h  CMakeLists.txt  MT4BridgeLibrary.cpp  MT4BridgeTest.cpp  README.md  library.h
